# e-commerce-bakushop

./: .gitignore  Dockerfile  Makefile  README.md  TODO  TODO.py  docker-compose-local.yml  manage.py  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: django.yml
accounts/: admin.py  models.py  tasks.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_account_phone_number.py  0003_account_activation_key_account_otp.py  0004_account_is_superuser.py  0005_remove_account_is_superuser.py  0006_account_is_superuser.py  0007_contact_remove_account_first_name_and_more.py  0008_rename_contact_contactdetail.py  0009_alter_contactdetail_phone_number.py  0010_rename_contactdetail_accountdetail.py  0011_alter_accountdetail_address_alter_accountdetail_city_and_more.py  0012_alter_accountdetail_user.py
api/: custom_api_exceptions.py  serializers.py  urls.py  views.py
home/: admin.py  choices.py  models.py  signals.py  tasks.py  urls.py  utils.py  views.py
home/migrations/: 0001_initial.py  0002_cart_category_productimage_product_cartitem.py  0002_remove_cart_customer_email_cart_user.py  0003_alter_cart_user.py  0003_remove_product_is_available_alter_product_images.py  0004_alter_category_image.py  0004_color_size_productproperty_and_more.py  0005_cartitem_date_purchased_cartitem_discount_and_more.py  0005_review.py  0006_rename_starts_review_stars.py  (+13 more)
order_automation/: asgi.py  celery.py  core_utils.py  settings.py  urls.py  user_context_processor.py  utils.py  wsgi.py
orders/: models.py  urls.py  utils.py  views.py
(+19 files in other folders)
